# unicodecpp

./: .clang-format  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
include/unicodecpp/: details.h  utf8_to_utf32_iterator.h  validation.h
include/unicodecpp/v8_0_0/: segmentation.h
scripts/: gen_gb_tests.py  gen_property_tables.py
src/unicodecpp/v8_0_0/: gb_tables.h  grapheme_segmentation.cpp
tests/unicodecpp/: utf8_to_utf32_iterator_tests.cpp  validation_tests.cpp
tests/unicodecpp/v8_0_0/: gb_tests.h  grapheme_segmentation_tests.cpp
